text.txt
(.venv) C:\Users\andre\Desktop\un_twitter_2\backend>python
Python 3.10.5 (tags/v3.10.5:f377153, Jun  6 2022, 16:14:13) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> from core.models import User
Test hash: $2b$12$2wP1oOMwVscfqec/sqqmm.ktATYgGcpZwVNf2bo5tF7..0SBB10pC
True
>>> from core import db
>>> from core imoprt app
  File "<stdin>", line 1
    from core imoprt app
              ^^^^^^
SyntaxError: invalid syntax
>>> from core import app
>>> app.app_context().pus()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'AppContext' object has no attribute 'pus'. Did you mean: 'push'?
>>> app.app_context().push()
>>> d_u = User.query.filter_by(login='kenny').one_or_none()
>>> d_u = User.query.filter_by(login='kenny')
>>> print(d_u)
SELECT user.id AS user_id, user.login AS user_login, user.nickname AS user_nickname, user.password_hash AS user_password_hash
FROM user
WHERE user.login = ?
>>> d_u = User.query.filter_by(login='kenny').delete()
>>> db.session.commit()
>>> users = User.query.all()
>>> print(len(users))
0
>>> n_u = User(login='kenny', nickname='Kenny', password_hash='$2b$12$2wP1oOMwVscfqec/sqqmm.ktATYgGcpZwVNf2bo5tF7..0SBB10pC')
>>> da.session.add(n_u)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'da' is not defined. Did you mean: 'db'?
>>> db.session.add(n_u)
>>> db.session.commit()
>>> users = User.query.all()
>>> print(len(users))
1
>>> exit()

(.venv) C:\Users\andre\Desktop\un_twitter_2\backend>